# gta-reversed

./: CMakeLists.txt
source/: Base.h  HookSystem.h  InjectHooksMain.cpp  PluginBase.cpp  PluginBase.h  StdInc.h
source/game_sa/: 3dMarker.h  3dMarkers.h  AccidentManager.h  AttractorScanner.h  AutoPilot.h  Birds.h  BouncingPanel.h  BreakManager_c.h  BreakObject_c.h  BrightLights.h  BulletInfo.h  BulletTrace.h  BulletTraces.h  Buoyancy.cpp  Buoyancy.h  CCheat.cpp  CCreepingFire.cpp  CCreepingFire.h  CExplosion.cpp  CExplosion.h  CFileLoader.cpp  CFireManager.cpp  CFireManager.h  CGame.cpp  CGeneral.cpp  CGeneral.h  CInterestingEvents.cpp  CInterestingEvents.h  CLines.cpp  CLines.h  COcclusion.cpp  COcclusion.h  CPad.cpp  CPad.h  CRenderer.cpp  CSprite.cpp  CSprite.h  CStreaming.h  CVehicleRecording.cpp  CVehicleRecording.h  (+118 more)
source/game_sa/Animation/: AnimAssociationData.h  AnimBlendAssocGroup.h  AnimBlendAssociation.h  AnimBlendClumpData.h  AnimBlendFrameData.h  AnimBlendHierarchy.h  AnimBlendNode.h  AnimBlendSequence.h  AnimBlendStaticAssociation.h  AnimBlock.h  AnimManager.cpp  AnimManager.h  AnimSequenceFrames.h  AnimationId.h  AnimationStyleDescriptor.h
source/game_sa/Audio/: AEAudioChannel.cpp  AEAudioEntity.h  AEAudioEnvironment.cpp  AEAudioEnvironment.h  AEAudioHardware.cpp  AEAudioHardware.h  AEAudioUtility.cpp  AEDoorAudioEntity.h  AEExplosionAudioEntity.h  AEFireAudioEntity.h  AEMFDecoder.cpp  AEMFDecoder.h  AEPedSpeechAudioEntity.h  AERadioTrackManager.h  AESmoothFadeThread.h  AESound.cpp  AESound.h  AESoundManager.cpp  AESoundManager.h  AEStaticChannel.cpp  AEStaticChannel.h  AEStreamTransformer.cpp  AEStreamTransformer.h  AEStreamingDecoder.cpp  AEStreamingDecoder.h  AETwinLoopSoundEntity.cpp  AETwinLoopSoundEntity.h  AEUserRadioTrackManager.cpp  AEUserRadioTrackManager.h  AEVehicleAudioEntity.h  AEVorbisDecoder.cpp  AEVorbisDecoder.h  AEWMADecoder.h  AEWaveDecoder.cpp  AEWeatherAudioEntity.h  AudioEngine.h  AudioZones.h  CAEAudioHardware.cpp  CAEAudioHardware.h  CAEAudioUtility.cpp  (+11 more)
source/game_sa/Audio/Entities/: AEAudioEntity.h  AEDoorAudioEntity.cpp  AEDoorAudioEntity.h  AEPedAudioEntity.cpp  AEPedAudioEntity.h  AEPedSpeechAudioEntity.h  AEPoliceScannerAudioEntity.cpp  AEPoliceScannerAudioEntity.h  AETwinLoopSoundEntity.cpp  AETwinLoopSoundEntity.h  AEVehicleAudioEntity.cpp  AEVehicleAudioEntity.h  (+4 more)
source/game_sa/Cheats/: Cheat.cpp  Cheat.h
source/game_sa/Collision/: BoundingBox.h  ColAccel.h  ColBox.h  ColDisk.h  ColLine.h  ColModel.h  ColPoint.h  ColSphere.cpp  ColSphere.h  ColStore.cpp  ColStore.h  ColTriangle.h  ColTrianglePlane.h  Collision.h  CollisionData.h  CollisionEventScanner.h  ColourSet.h  Sphere.h
source/game_sa/Control/: CarAI.h  CustomRoadsignMgr.h  CutsceneMgr.h  GameLogic.h  Garage.h  PathFind.cpp  PathFind.h  Replay.h  SetPieces.h  StuntJumpManager.h  TrafficLights.cpp
source/game_sa/Controllers/: ControllerState.h  Pad.cpp  Pad.h
source/game_sa/Core/: CVector.h  CVector2D.h  Date.h  EntryInfoNode.h  Link.h  LinkList.h  List_c.h  MatrixLinkList.h  MemoryMgr.cpp  OctTree.h  Pools.h  PtrList.h  PtrNode.h  PtrNodeDoubleLink.h  PtrNodeSingleLink.h  QuadTreeNode.h  Quaternion.h  RGBA.h  Rect.h  Store.h  Timer.cpp  Timer.h
source/game_sa/Debug/: LoadMonitor.cpp  LoadMonitor.h
source/game_sa/Engine/: General.cpp
source/game_sa/Entity/: Building.h  Entity.cpp  Entity.h  Physical.cpp  Physical.h  Placeable.h  Reference.h  References.h
source/game_sa/Enums/: eAnimBlendCallbackType.h  eVehicleHandlingFlags.h  eWeaponFire.h  eWeaponFlags.h  eWinchType.h
source/game_sa/Events/: EntityCollisionEvents.cpp  EntityCollisionEvents.h  Event.h  EventAcquaintancePed.cpp  EventAcquaintancePed.h  EventAttractor.cpp  EventAttractor.h  EventCreatePartnerTask.h  EventDamage.cpp  EventDamage.h  EventDeadPed.cpp  EventDeadPed.h  EventDeath.h  EventDraggedOutCar.h  EventEditableResponse.h  EventGlobalGroup.h  EventGotKnockedOverByCar.h  EventGroup.h  EventGroupEvent.h  EventGunAimedAt.h  EventGunShot.h  EventGunShotWhizzedBy.h  EventHandler.h  EventHandlerHistory.cpp  EventHandlerHistory.h  EventHitByWaterCannon.h  EventInAir.h  EventInWater.h  EventKnockOffBike.cpp  EventKnockOffBike.h  EventPedToChase.h  EventPedToFlee.h  EventScanner.h  EventScriptCommand.cpp  EventScriptCommand.h  EventSoundQuiet.cpp  EventSoundQuiet.h  EventVehicleCollision.cpp  EventVehicleCollision.h  EventVehicleDamage.h  (+14 more)
source/game_sa/Filesystem/: Directory.h  FileObjectInstance.h
source/game_sa/Fx/: FxFrustumInfo_c.h  FxInfoManager_c.h  FxManager_c.cpp  FxManager_c.h  FxSystem_c.h
source/game_sa/FxTools/: FxManager_c.h  FxMemoryPool_c.h  FxPrtMult_c.h  FxSphere_c.h  Fx_c.h
source/game_sa/Models/: AtomicModelInfo.h  BaseModelInfo.h  ClumpModelInfo.h  LodAtomicModelInfo.h  LodTimeModelInfo.h  ModelInfo.h  ModelInfoAccelerator.h  PedModelInfo.h  TimeModelInfo.h  VehicleModelInfo.cpp  VehicleModelInfo.h  WeaponModelInfo.h
source/game_sa/Peds/: PedGroup.h  PedGroupMembership.cpp  PedGroupMembership.h  PedGroupPlacer.h  PedGroups.h  PedList.h  PedPlacement.h  Population.cpp
source/game_sa/Platform/: oswrapper.cpp
source/game_sa/Render/: LoadingScreen.h  VisibilityPlugins.cpp  VisibilityPlugins.h
source/game_sa/RenderWare/: D3DIndexDataBuffer.h  D3DResourceSystem.h  D3DTextureBuffer.h
source/game_sa/Scripts/: MissionCleanup.h  RunningScript.cpp  RunningScript.h  TheScripts.cpp  TheScripts.h
source/game_sa/Tasks/: CTaskSimple.cpp  CTaskSimple.h  ScriptedBrainTaskStore.cpp  ScriptedBrainTaskStore.h  TaskComplex.h  TaskComplexSequence.h  TaskComplexUseSequence.h  TaskManager.h  TaskSequences.h  TaskTimer.h
source/game_sa/Text/: Data.cpp  Data.h  KeyArray.cpp  KeyArray.h  MissionTextOffsets.cpp  MissionTextOffsets.h  Text.cpp  Text.h
source/game_sa/World/: PopCycle.cpp  PopCycle.h  World.cpp  World.h
source/reversiblehooks/: ReversibleHooks.cpp  SSimpleReversibleHook.cpp
source/toolsmenu/: CDebugMenu.cpp  CDebugMenu.h  CDebugMenuToolInput.cpp  CDebugMenuToolInput.h
source/toolsmenu/DebugModules/: COcclusionDebugModule.cpp  COcclusionDebugModule.h
(+378 files in other folders)
